2006-09-26  Akim Demaille  <akim.demaille@free.fr>

	Put it in urbi::.

	* src/utils/urbiwalk.cpp: Put things in the urbi:: namespace.
	Adjust dependencies.
	Formatting changes.
	* src/utils/Move.cpp: Ditto.
	* src/utils/Move.h: Ditto.
	* src/liburbi/uconversion.h: Ditto.
	* src/liburbi/usyncclient.cpp: Ditto.
	* src/liburbi/lockable.h: Ditto.
	* src/liburbi/uclient.cpp: Ditto.
	* src/liburbi/usyncclient.h: Ditto.
	* src/liburbi/uabstractclient.cpp: Ditto.
	* src/liburbi/uclient.h: Ditto.
	* src/liburbi/uobject/uobject.cc: Ditto.
	* src/liburbi/uobject/uvar.cc: Ditto.
	* src/liburbi/uobject/uobject.template.h: Ditto.
	* src/liburbi/uobject/common_uvalue.cc: Ditto.
	* src/liburbi/uobject/uexternal.h: Ditto.
	* src/liburbi/uconversion.cpp: Ditto.
	* src/liburbi/uabstractclient.h: Ditto.

2006-09-25  matthieu nottale  <nottale@gostai.com>

	Fixing stuffs

	* src/liburbi/uobject/uobject.template.h: Fix missing include <algorithm> for find.
	* src/liburbi/uobject/common_uvalue.cc: Fix code that was mistakenly removed between 140 and 141.

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	Don't install libuobject.
	* src/liburbi/uobject/Makefile.am: Make it noinst.

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	urbi dirs.
	* build-aux/urbi-dirs.m4: New.
	* configure.ac: Use it.
	* src/utils/urbiscale.cpp: Formatting changes.

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	distcheck passes.

	* sdk/Makefile.am (gccversion): Simplify the handling.
	(CLEANFILES): Remove Makefile.module.
	* build-aux/doxygen.mk: Chmod before rm to make sure it'll pass.

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	Fixes.

	* sdk/Makefile.am: Use DESTDIR.
	Ship Makefile.module.in.
	* src/utils/urbiwalk.cpp: Use a stack allocated object.
	Formatting changes.
	* src/liburbi/uobject/uobject.cc: Remove useless "urbi::".
	* src/liburbi/uobject/uvar.cc: No using namespace urbi.
	(operator<< (ostream, UValue): Don't prototype here, it is
	declared elsewhere anyway.